--- a/lib/db/countries.yml
+++ b/lib/db/countries.yml
@@ -13,7 +13,7 @@
 :AT: Austria
 :AU: Australia
 :AW: Aruba
-:AX: "Åland"
+:AX: Åland
 :AZ: Azerbaijan
 :BA: Bosnia and Herzegovina
 :BB: Barbados
@@ -47,7 +47,6 @@
 :CM: Cameroon
 :CN: China
 :CO: Colombia
-:COUNTRY_ISO_CODE: country_name
 :CR: Costa Rica
 :CU: Cuba
 :CV: Cape Verde
